--- a/harish.html
+++ b/harish.html
@@ -3,11 +3,13 @@
 <head>
 <title> harish</title>
 <div>
-<div style="background-color:silver;width:100%;height:150px":bodar="">
-  <h1><center><face="RockwellExtra"> ABC BIKE SERVICE CENTER</h1></center>
+<div style="background-color:silver;width:100%;height:100px":bodar="6px">
+ 
+  <h1><center><face="RockwellExtra"><img src="https://image.shutterstock.com/image-vector/car-bike-repair-shop-logo-600w-351280901.jpg" style="width:6%"> ABC BIKE SERVICE CENTER <img src=""https://image.shutterstock.com/image-vector/car-bike-repair-shop-logo-600w-351280901.jpg" style="width:6%""></h1></center>
    
  <div>
-  <hr><hr><h2><marquee direction="right" scrollamount="10"> <font color="red"><face="Rockwell Extra"> WELCOME  TO ABC BIKE SERVICE CENTER</marquee></h2><hr><hr> 
+  <div style="background-color:#616A6B ;width:100%;height:120px":bodar="6px ">
+  <hr><hr><h2><marquee direction="right" scrollamount="10"> <font color="#7BE413"><face="Rockwell Extra"> WELCOME  TO ABC BIKE SERVICE CENTER<img src="https://c8.alamy.com/zooms/9/ba04275fa4104cada76b41110eb85d11/2gprj0c.jpg"style="width:3%"></marquee></h2><hr> 
 </div>    
 
 </head>
@@ -196,14 +198,14 @@ function showSlides(n) {
 <div>
 <div style="background-color:gray; width:100%;height:500px">
 <h1><center>services available</h1>  
-<div><div style="float:left;width:25%"><img src="image2.jpg" width="98%" > <div style="color:white" align="center">ENGINE REPAIRING</div></div>
-<div style="float:left;width:25%"><img src="image3.jpg" width="98%" > <div style="color:white" align="center">BIKE CHAIN SPRAY</div></div>
-<div style="float:left;width:25%"><img src="image9.jpg" width="98%" > <div style="color:white" align="center">BIKE WATER WASH</div></div>
-<div style="float:left;width:25%"><img src="image5.jpg" width="98%" > <div style="color:white" align="center">BIKE SUSPENSION REPLACEMENT</div></div>
-<div style="float:left;width:25%"><img src="image6.jpg" width="98%" > <div style="color:white" align="center">BIKE TYRE CHANGE</div></div>
-<div style="float:left;width:25%"><img src="image7.jpg" width="98%" > <div style="color:white" align="center"></div></div>
-<div style="float:left;width:25%"><img src="image10.jpg" width="98%" > <div style="color:white" align="center"></div></div>
-<div style="float:left;width:25%"><img src="image4.jpg" width="98%" > <div style="color:white" align="center">ENGINE OIL REPLACEMENT</div></div>
+<div><div style="float:left;width:25%"><img src="image2.jpg" width="88%" > <div style="color:white" align="center">ENGINE REPAIRING</div></div>
+<div style="float:left;width:25%"><img src="image3.jpg" width="88%" > <div style="color:white" align="center">BIKE CHAIN SPRAY</div></div>
+<div style="float:left;width:25%"><img src="image9.jpg" width="88%" > <div style="color:white" align="center">BIKE WATER WASH</div></div>
+<div style="float:left;width:25%"><img src="image5.jpg" width="88%" > <div style="color:white" align="center">BIKE SUSPENSION REPLACEMENT</div></div>
+<div style="float:left;width:25%"><img src="image6.jpg" width="88%" > <div style="color:white" align="center">BIKE TYRE CHANGE</div></div>
+<div style="float:left;width:25%"><img src="image7.jpg" width="88%" > <div style="color:white" align="center"></div></div>
+<div style="float:left;width:25%"><img src="image10.jpg" width="88%" > <div style="color:white" align="center"></div></div>
+<div style="float:left;width:25%"><img src="image4.jpg" width="88%" > <div style="color:white" align="center">ENGINE OIL REPLACEMENT</div></div>
 
 
 ><div style="background-color:#EC7063 ;width:100%;height:300px">
@@ -219,11 +221,13 @@ abcbike.services@gmail.com</p>
 </div>
 
 <div>
+  <h3>Adderss</h3><div
+  <p>************</p>
 <h3 align="center">SERVICE REGISTION</h3>
-<p style="float:left;">
+<p style="float:left;"></p><br>
 
 <form align="center">  
-EnterName:<input type="text" name="name"/><br/>  
+EnterName:<input type="text" name="name"/><br/> 
 Bicknumbe:<input type="text" name="name"/><br/>  
 MobeileNO:<input type="text" name="name"/><br/> 
 <button>Submit</button></center>
